--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="zh">
+<html lang="zh-CN">
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Happy Birthday To Zheng You</title>
+<title>SPECIAL YOU</title>
 <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
