--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
   <meta name="renderer" content="webkit">
-  <!-- Favicons -->
-  <link rel="icon shortcut" type="image/ico" href="/img/love109.jpg">
-  <link rel="icon" href="/img/love109.jpg">
 
-  <title>LOVE109❤️纪实小屋</title>
+  <title>纪实小屋</title>
 
 <!--Baidu Tongji-->
   <script>
@@ -31,7 +28,7 @@
     <div class="container">
       <header class="header">
   <div class="blog-title">
-    <a href="/" class="logo">LOVE109❤️纪实小屋</a>
+    <a href="/" class="logo">纪实小屋</a>
   </div>
   <nav class="navbar">
     <ul class="menu">
@@ -103,31 +100,7 @@
     <!-- Copyright -->
     Copyright © 2019 -
     2022
-        <a href="https://www.itbob.cn/" target="_blank">ITBOB</a>&nbsp;&nbsp;|&nbsp;
-        <!-- ICP -->
-        <img src="https://fastly.jsdelivr.net/gh/TRHX/CDN-for-itrhx.com@3.0.9/images/icp.png" alt="ICP">
-        <a href="https://beian.miit.gov.cn/" target="_blank">鄂ICP备19003281号-5</a>&nbsp;&nbsp;|&nbsp;
-        <!-- 萌ICP -->
-        <img src="https://fastly.jsdelivr.net/gh/TRHX/CDN-for-itrhx.com@3.0.9/images/moeicp.png" alt="MOE ICP">
-        <a href="https://icp.gov.moe/" target="_blank">萌ICP备20203344号</a>&nbsp;&nbsp;|&nbsp;
-
-        <!-- 不蒜子 网页计数器 -->
-        <script src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
-        <span id="busuanzi_container_site_pv">
-    PV: <span id="busuanzi_value_site_pv"></span>&nbsp;&nbsp;|&nbsp;
-        </span>
-        <span id="busuanzi_container_site_uv">
-    UV: <span id="busuanzi_value_site_uv"></span>
-        </span>
-        <br>
-        <br> 友情链接：
-        <a href="https://dxq520.cn/" target="_blank">两个有意思的</a>&nbsp;&nbsp;|&nbsp;
-        <a href="https://www.fengyunxiao.cn/" target="_blank">晨哥❤芸霄</a>&nbsp;&nbsp;|&nbsp;
-        <a href="https://www.myann.cn/" target="_blank">宝宝和豆豆的那些事</a>&nbsp;&nbsp;|&nbsp;
-        <a href="https://yaolan.mazefeng.com/" target="_blank">恋澜星空</a>&nbsp;&nbsp;|&nbsp;
-        <a href="http://love730.com/" target="_blank">双陈记</a>&nbsp;&nbsp;|&nbsp;
-        <a href="https://www.esloy.com/" target="_blank">D-haha 情侣博客</a>&nbsp;&nbsp;|&nbsp;
-        <a href="http://tantingfang.cn//" target="_blank">我在人间凑数的日子</a>
+        <a href="https://hizard.cc/" target="_blank">hizard</a>
 </div>
 </html>
 
