--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       <section class="date">
     <div class="date">
         <h2>
-            TRH and
-                PLL have been together for</h2>
+            HBB and
+                ZY have known each other for</h2>
         <div class="timer">
             <b id="d"></b> Days <b id="h"></b> Hours <b id="m"></b> Minutes <b id="s"></b> Seconds
         </div>
@@ -61,7 +61,7 @@
     <script>
         function timer() {
             window.setTimeout("timer()", 1000);
-            var start = new Date("2016-10-9 22:33:44");
+            var start = new Date("2019-2-2 9:19:19");
             var t = new Date().getTime() - start;
             var h = ~~(t / 1000 / 60 / 60 % 24);
             if (h < 10) {
