--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         timer();
         setInterval(timer, 1000);
     </script>
-     <iframe src="https://www.uquq.cn/tools/love/1.mp3" allow="autoplay" hidden/>
+     <iframe src="music/1.mp3" allow="autoplay" hidden/>
 </body>
 
 </html>
