--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-<!--第15行为背景随机图片 其他类型接口请到 www.uquq.cn/img   --> 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -12,7 +11,7 @@
         body {
             -webkit-font-smoothing: antialiased;
             font-family: Helvetica Neue, Helvetica, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
-            background-image: "/bg.jpg";
+            background-image: url('https://imgapi.cn/api.php?zd=zsy&fl=dongman&gs=images');
             font-size: 85%;
             margin: 0;
         }
@@ -74,7 +73,6 @@
         timer();
         setInterval(timer, 1000);
     </script>
-     <iframe src="music/1.mp3" allow="autoplay" hidden/>
 </body>
 
 </html>
