--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         body {
             -webkit-font-smoothing: antialiased;
             font-family: Helvetica Neue, Helvetica, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
-            background-image: url('https://imgapi.cn/api.php?zd=zsy&fl=dongman&gs=images');
+            background-image: bg.jpg;
             font-size: 85%;
             margin: 0;
         }
