--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
 </head>
 
 <body>
+    <audio controls autoplay>
+        <source src="music/1.mp3">
+    </audio>
     <div class="content">
         <h2> HBB 和 ZY 已经相识了</h2>
         <div class="timer">
