--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
         <source src="music/2.mp3">
     </audio>
     <div class="content">
-        <h2> HBB 和 ZY 已经相识了</h2>
+        <h2> HBB 和 ZY 相识了</h2>
         <div class="timer">
-            <b id="d"></b> 天 <b id="h"></b> 小时 <b id="m"></b> 分钟 <b id="s"></b> 秒        </div>
+            <b id="d"></b> 天 <b id="h"></b> 时 <b id="m"></b> 分 <b id="s"></b> 秒        
+        </div>
     </div>
 
     <script>
